# Spotify_Analytics

./: .gitattributes  .gitignore  README.md  main.py  pyproject.toml  python
data/gold/: artist_popularity.csv  audio_clusters_cluster_centers.csv  audio_clusters_cluster_profile.csv  popularity_segments.csv  year_trends.csv
data/models/: kmeans_audio_clusters.pkl
notebooks/: exploratory_analysis.ipynb
src/: bronze_layer.py  config.py  data_loader.py  gold_layer.py  ml_models.py  silver_layer.py  utils.py  visualization.py
